# 3dRenderingEngine

./: CMakeLists.txt  Makefile  README.md
include/: camera.hpp  colourT.hpp  image.hpp  mesh_data.hpp  render.hpp
include/math/: geometry.hpp  lingebra.hpp
src/: colourT.cpp  geometry.h  image.cpp  main.cpp  mesh_data.cpp  render.cpp
